--- a/Perpus/src/views/PengunjungView.form
+++ b/Perpus/src/views/PengunjungView.form
@@ -321,7 +321,7 @@
       <SubComponents>
         <Component class="javax.swing.JLabel" name="jLabel11">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Record"/>
+            <Property name="text" type="java.lang.String" value="Record Buku"/>
           </Properties>
         </Component>
         <Container class="javax.swing.JScrollPane" name="jScrollPane3">
